--- a/index.html
+++ b/index.html
@@ -1,172 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>HACKED!!</title>
+<title>UH OH!!!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-  body {
-    margin: 0;
-    font-family: "Comic Sans MS", Impact, fantasy;
-    background: black;
-    color: lime;
-    text-align: center;
-    overflow-x: hidden;
-    animation: flash 0.15s infinite;
-  }
+body {
+  background:black;
+  color:lime;
+  font-family: "Courier New", monospace;
+  text-align:center;
+  overflow:hidden;
+}
 
-  @keyframes flash {
-    0% { background: black; }
-    33% { background: purple; }
-    66% { background: red; }
-    100% { background: black; }
-  }
+#warning {
+  font-size: 30px;
+  color:red;
+  font-weight:bold;
+  text-shadow: 0 0 10px red;
+  margin-top:20px;
+}
 
-  h1 {
-    font-size: 60px;
-    color: red;
-    text-shadow: 5px 5px 0 yellow;
-    margin-top: 20px;
-    animation: shake 0.1s infinite;
-  }
+#ip {
+  font-size:22px;
+  margin-top:10px;
+}
 
-  @keyframes shake {
-    0% { transform: translate(0,0); }
-    25% { transform: translate(3px,-2px); }
-    50% { transform: translate(-4px,2px); }
-    75% { transform: translate(3px,3px); }
-    100% { transform: translate(0,0); }
-  }
+#terminal {
+  width:90%;
+  height:200px;
+  background:#020202;
+  border:2px solid lime;
+  margin:20px auto;
+  padding:10px;
+  overflow:auto;
+  font-size:14px;
+}
 
-  #terminal {
-    margin: 20px auto;
-    width: 90%;
-    height: 250px;
-    border: 3px solid lime;
-    background: black;
-    padding: 10px;
-    font-family: monospace;
-    overflow-y: auto;
-    font-size: 16px;
-  }
-
-  #ip {
-    font-size: 40px;
-    color: cyan;
-    margin-top: 20px;
-    text-shadow: 2px 2px blue;
-  }
-
-  #map {
-    width: 90%;
-    height: 350px;
-    border: 5px dashed lime;
-    margin: 25px auto;
-  }
+#map {
+  width:90%;
+  height:350px;
+  border:5px dashed hotpink;
+  margin:25px auto;
+}
 </style>
 </head>
-
 <body>
 
-<!-- LOUD ALARM -->
-<audio id="alertSound" src="https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg"></audio>
-
-<h1>⚠️ YOU HAVE BEEN HACKED !!! ⚠️</h1>
-
-<div id="ip">Fetching IP...</div>
+<div id="warning">UH OH!!! YOUR HISTORY HAS BEEN COMPROMISED!</div>
+<div id="ip">Loading IP...</div>
 
 <div id="terminal"></div>
 
 <div id="map"></div>
 
 <script>
-const snd = document.getElementById("alertSound");
-snd.volume = 1.0;
-snd.play().catch(()=>{});
+// ------------------- PHONE VIBRATION -------------------
+function vibratePhone() {
+  if (navigator.vibrate) {
+    navigator.vibrate([200, 100, 200, 100, 500]);
+    setInterval(() => navigator.vibrate([150, 80, 150]), 4000);
+  }
+}
+vibratePhone();
 
-// TERMINAL
+// ------------------- TERMINAL SPAM -------------------
 const term = document.getElementById("terminal");
-function hack(text) {
-  term.innerHTML += "> " + text + "<br>";
+
+function spam() {
+  const lines = [
+    "Compiling IP logs...",
+    "Breaching firewall...",
+    "Decrypting browser history...",
+    "Sending data to government server...",
+    "Locating device...",
+    "Injecting malware.js...",
+    "Hacking fridge...",
+    "Downloading TikTok drafts..."
+  ];
+  term.innerHTML += "> " + lines[Math.floor(Math.random()*lines.length)] + "<br>";
   term.scrollTop = term.scrollHeight;
 }
+setInterval(spam, 500);
 
-// Random fake hacking text
-const lines = [
-  "Decrypting GPS...",
-  "Triangulating coordinates...",
-  "Hacking satellites...",
-  "Sniffing WiFi signals...",
-  "Tracking SIM card...",
-  "Pinging phone towers...",
-  "Injecting geolocation payload...",
-  "Bypassing location permissions..."
-];
-
-setInterval(() => hack(lines[Math.floor(Math.random()*lines.length)]), 400);
-
-// IP + fallback location
-async function loadIPFallback() {
-  try {
-    const res = await fetch("https://ipwho.is/");
-    const data = await res.json();
-
-    document.getElementById("ip").textContent = "YOUR IP: " + data.ip;
-    hack("IP found: " + data.ip);
-    hack("Using fallback IP location...");
-
-    const lat = data.latitude;
-    const lon = data.longitude;
-
-    document.getElementById("map").innerHTML = `
-      <iframe width="100%" height="100%" style="border:0"
-      src="https://www.google.com/maps?q=${lat},${lon}&z=12&output=embed"></iframe>
-    `;
-  } catch {
-    hack("Failed to load fallback map.");
-  }
-}
-
-// REAL DEVICE GPS
-function loadGPS() {
-  if (!navigator.geolocation) {
-    hack("GPS not supported.");
-    loadIPFallback();
-    return;
-  }
-
-  hack("Requesting device GPS...");
-
-  navigator.geolocation.getCurrentPosition(
-    pos => {
-      const lat = pos.coords.latitude;
-      const lon = pos.coords.longitude;
-
-      hack("GPS LOCKED: " + lat + ", " + lon);
-
-      document.getElementById("map").innerHTML = `
-        <iframe width="100%" height="100%" style="border:0"
-        src="https://www.google.com/maps?q=${lat},${lon}&z=14&output=embed"></iframe>
-      `;
-    },
-    err => {
-      hack("GPS blocked. Using IP instead.");
-      loadIPFallback();
-    },
-    { enableHighAccuracy: true, timeout: 5000 }
-  );
-}
-
-// Get IP for display
-fetch("https://api.ipify.org?format=json")
+// ------------------- SHOW IP -------------------
+fetch("https://ipwho.is/")
   .then(r => r.json())
-  .then(d => {
-    document.getElementById("ip").textContent = "YOUR IP: " + d.ip;
-    hack("IP detected: " + d.ip);
-  })
-  .catch(()=> hack("Could not fetch IP"));
+  .then(data => {
+    document.getElementById("ip").innerHTML = "Your IP: " + data.ip;
+  });
 
-loadGPS();
+// ------------------- MAP RENDER -------------------
+function showMap(lat, lon) {
+  document.getElementById("map").innerHTML = `
+    <iframe
+      width="100%" height="100%"
+      style="border:0"
+      src="https://www.openstreetmap.org/export/embed.html?bbox=${lon-0.02}%2C${lat-0.02}%2C${lon+0.02}%2C${lat+0.02}&layer=mapnik&marker=${lat}%2C${lon}">
+    </iframe>
+  `;
+}
+
+// ------------------- GPS + IP FALLBACK -------------------
+navigator.geolocation.getCurrentPosition(
+  (pos) => {
+    const lat = pos.coords.latitude;
+    const lon = pos.coords.longitude;
+    showMap(lat, lon);
+  },
+  (err) => {
+    fetch("https://ipwho.is/")
+      .then(r => r.json())
+      .then(d => showMap(d.latitude, d.longitude));
+  },
+  {enableHighAccuracy:true, timeout:5000}
+);
 </script>
 
 </body>
